awk/src/snapshots/awk__lexer__sample_1.snap
---
source: src/lexer.rs
expression: lexed_1
---
[
  "OpenCurlyBrace",
  "Newline",
  "WhiteSpace",
  "Print",
  "WhiteSpace",
  "Dollar",
  {
    "Number": 1
  },
  "Newline",
  "CloseCurlyBrace",
  "Newline"
]
