awk/src/snapshots/awk__lexer__sample_5.snap
---
source: src/lexer.rs
expression: lexed_5
---
[
  "Begin",
  "WhiteSpace",
  "OpenCurlyBrace",
  "Newline",
  "WhiteSpace",
  "Print",
  "WhiteSpace",
  {
    "Literal": [
      "P",
      "r",
      "o",
      "c",
      "e",
      "s",
      "s",
      "i",
      "n",
      "g",
      " ",
      "s",
      "t",
      "a",
      "r",
      "t",
      "e",
      "d",
      ".",
      ".",
      "."
    ]
  },
  "Newline",
  "WhiteSpace",
  {
    "Name": [
      "t",
      "o",
      "t",
      "a",
      "l",
      "_",
      "l",
      "i",
      "n",
      "e",
      "s"
    ]
  },
  "WhiteSpace",
  "Equal",
  "WhiteSpace",
  {
    "Number": 12
  },
  "Newline",
  "CloseCurlyBrace",
  "Newline",
  "Newline",
  "OpenCurlyBrace",
  "Newline",
  "WhiteSpace",
  {
    "Name": [
      "t",
      "o",
      "t",
      "a",
      "l",
      "_",
      "l",
      "i",
      "n",
      "e",
      "s"
    ]
  },
  "Add",
  "Add",
  "Newline",
  "CloseCurlyBrace",
  "Newline",
  "Newline",
  "End",
  "WhiteSpace",
  "OpenCurlyBrace",
  "Newline",
  "WhiteSpace",
  "Print",
  "WhiteSpace",
  {
    "Literal": [
      "P",
      "r",
      "o",
      "c",
      "e",
      "s",
      "s",
      "i",
      "n",
      "g",
      " ",
      "f",
      "i",
      "n",
      "i",
      "s",
      "h",
      "e",
      "d",
      "."
    ]
  },
  "Newline",
  "WhiteSpace",
  "Print",
  "WhiteSpace",
  {
    "Literal": [
      "T",
      "o",
      "t",
      "a",
      "l",
      " ",
      "l",
      "i",
      "n",
      "e",
      "s",
      " ",
      "p",
      "r",
      "o",
      "c",
      "e",
      "s",
      "s",
      "e",
      "d",
      ":"
    ]
  },
  "Comma",
  "WhiteSpace",
  {
    "Name": [
      "t",
      "o",
      "t",
      "a",
      "l",
      "_",
      "l",
      "i",
      "n",
      "e",
      "s"
    ]
  },
  "Newline",
  "CloseCurlyBrace",
  "Newline"
]
